--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#000000"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="zbf.zbficonview.MainActivity">
@@ -32,6 +33,7 @@
         />
 
     <zbf.zbficonview.view.MyWaveView
+        android:id="@+id/waveview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
