--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#000000"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical"
     tools:context="zbf.zbficonview.MainActivity">
 
@@ -25,6 +25,16 @@
         android:layout_height="wrap_content"
         android:text="reset"
         />
+<!--    <zbf.zbficonview.view.XfermodeView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>-->
+    <zbf.zbficonview.view.SaveLayerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <zbf.zbficonview.view.MyCanvasTestView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 
     <zbf.zbficonview.view.MyTouchView
         android:id="@+id/touchview"
