--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,9 @@
 <!--    <zbf.zbficonview.view.XfermodeView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>-->
+    <zbf.zbficonview.view.RestoreToCountView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <zbf.zbficonview.view.SaveLayerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
