--- a/app/src/main/res/drawable/tip_anim.xml
+++ b/app/src/main/res/drawable/tip_anim.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<animation-list xmlns:android="http://schemas.android.com/apk/res/android">
-
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:oneshot="true">
+    <item android:drawable="@drawable/idp" android:duration="50"/>
+    <item android:drawable="@drawable/idq" android:duration="50"/>
+    <item android:drawable="@drawable/idr" android:duration="50"/>
+    <item android:drawable="@drawable/ids" android:duration="50"/>
+    <item android:drawable="@drawable/idt" android:duration="50"/>
+    <item android:drawable="@android:color/transparent" android:duration="50"/>
 </animation-list>
