--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,31 +28,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>-->
     <zbf.zbficonview.view.RedPointView
+        android:id="@+id/redpoint"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         />
 
-<!--    <zbf.zbficonview.view.RestoreToCountView
+    <zbf.zbficonview.view.RedPointViewCopy
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-    <zbf.zbficonview.view.SaveLayerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    <!--    <zbf.zbficonview.view.RestoreToCountView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <zbf.zbficonview.view.MyCanvasTestView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"/>-->
+        <zbf.zbficonview.view.SaveLayerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-<!--    <zbf.zbficonview.view.MyTouchView
-        android:id="@+id/touchview"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        />
+        <zbf.zbficonview.view.MyCanvasTestView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"/>-->
 
-    <zbf.zbficonview.view.MyWaveView
-        android:id="@+id/waveview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
+    <!--    <zbf.zbficonview.view.MyTouchView
+            android:id="@+id/touchview"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            />
+
+        <zbf.zbficonview.view.MyWaveView
+            android:id="@+id/waveview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>-->
 
 </LinearLayout>
