--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -23,7 +23,7 @@
             app:headerHeight="300dp"
             app:headerVisibleHeight="100dp"/>-->
 
-    <zbf.zbficonview.view.DoubleColorRadiaGradientView
+<!--    <zbf.zbficonview.view.DoubleColorRadiaGradientView
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
 
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="button"/>
+        android:text="button"/>-->
 
     <!--    <zbf.zbficonview.viewgroup.MyLineLayout
             android:layout_width="match_parent"
@@ -112,54 +112,16 @@
             android:textColor="#43BBE7"/>
 
     </zbf.zbficonview.viewgroup.MyFlowLayout>
-    <zbf.zbficonview.viewgroup.FlowLayout
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ff00ff"
-        >
+        android:layout_height="match_parent">
+        <zbf.zbficonview.viewgroup.WaterFallLayout
+            android:layout_width="match_parent"
+            android:id="@+id/waterfall"
+            android:layout_height="match_parent">
 
-        <TextView
-            style="@style/text_flag_01"
-            android:background="#666666"
-            android:text="Welcome"
-            android:textColor="#43BBE7"/>
-
-        <TextView
-            style="@style/text_flag_01"
-            android:background="#666666"
-            android:text="IT工程师"
-            android:textColor="#43BBE7"/>
-
-        <TextView
-            style="@style/text_flag_01"
-            android:background="#666666"
-            android:text="我真是可以的"
-            android:textColor="#43BBE7"/>
-
-        <TextView
-            style="@style/text_flag_01"
-            android:background="#666666"
-            android:text="你觉得呢"
-            android:textColor="#43BBE7"/>
-
-        <TextView
-            style="@style/text_flag_01"
-            android:background="#666666"
-            android:text="不要只知道挣钱"
-            android:textColor="#43BBE7"/>
-
-        <TextView
-            style="@style/text_flag_01"
-            android:background="#666666"
-            android:text="努力ing"
-            android:textColor="#43BBE7"/>
-
-        <TextView
-            style="@style/text_flag_01"
-            android:background="#666666"
-            android:text="I thick i can"
-            android:textColor="#43BBE7"/>
-
-    </zbf.zbficonview.viewgroup.FlowLayout>
+        </zbf.zbficonview.viewgroup.WaterFallLayout>
+    </ScrollView>
 
 </LinearLayout>
