完善流布局

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -122,6 +122,12 @@
             android:layout_height="match_parent">
 
         </zbf.zbficonview.viewgroup.WaterFallLayout>
+<!--        <zbf.zbficonview.viewgroup.WaterfallLayoutImprove
+            android:layout_width="match_parent"
+            android:id="@+id/waterfall"
+            android:layout_height="match_parent">
+
+        </zbf.zbficonview.viewgroup.WaterfallLayoutImprove>-->
     </ScrollView>
 
 </LinearLayout>
